# hku-avenir-2nd-round

./: .gitattributes  .gitignore  .python-version  LICENSE  README.md  USAGE.md  all_endpoints.ipynb  all_endpoints.py  backtest_results.json  collect_data_flexible.py  config.py  data_collector.py  enhanced_momentum.ipynb  example.ipynb  hist_data.py  oms.txt  pyproject.toml  requirements.txt  strat_example.py  v1_ls_bt.json  v3_cointegration_bt.json
.cursor/plans/: h-e083544d.plan.md
Backtester/: BACKTESTER_README.md  backtest_HODL.py  backtest_example.py  backtester.py  hist_data.py  oms_simulation.py  strategy_adapter.py
backtest/: docs.md  example.py  symbol_list.py  v1_hold_bt.py  v1_ls_bt.py  v1_pairs_bt.py
backtest/docs/: Backtester.run_backtest.md  OMSClient.get_current_price.md  OMSClient.set_target_position.md  PositionManager.filter_orders.md
backtest/example/: example.py  v1_hold.py
backtest/position_managers/: example.py  v1_ls_pm.py
backtest/strategies/: v1_hold.py  v1_ls.py  v1_pairs.py
backtester/backtest/: v1_ls_bt.py  v1_pairs_bt.py  v2_pairs_bt.py  v3_cointegration_bt.py
backtester/src/: backtester.py  example.ipynb  format_utils.py  generate_regime_labels.py  hist_data.py  oms_simulation.py  utils.py
hypothesis_testing/: __init__.py
hypothesis_testing/cointegration/: CONSTRAINTS.md  WORKFLOW.md  __init__.py  basket_generator.py  benchmark_parallel.py  data_loader.py  data_split.py  deduplicate_baskets.py  filter_mean_reversion.py  filter_sustainability.py  h1.ipynb  hmm_regime_hook.ipynb  hmm_regimes.py  johansen_test.py  optimize_zscore.py  optimizer.py  persistence.py  (+7 more)
sdk/: oms_client.py
src/: backtester.py  hist_data.py  oms_simulation.py  position_manager.py  tools.py
strategies/: v1_hold.py
(+20 files in other folders)
