[project]
name = "data-work-59q897"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Lev", email = "lr264@st-andrews.ac.uk"}
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "ccxt>=4.5.4",
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
