[project]
name = "data-work-59q897"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Lev", email = "lr264@st-andrews.ac.uk"}
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "ccxt>=4.5.4",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=1.22.4,<2.0.0",
    "pandas>=2.3.2",
    "plotly>=5.0.0,<6.0.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.0",
    "pyportfolioopt>=1.5.0",
    "hmmlearn>=0.3.3",
]
